# kpl-ticketing-system

./: Event_Ticketing.postman_collection.json  README.md  main.py  pyproject.toml
docs/: event_api_examples.http  (+1 more)
event-ticketing-system/: .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt  setup_folders.py
event-ticketing-system/alembic/: env.py
event-ticketing-system/alembic/versions/: 8ccebf777d94_add_booking_id_to_ticket_model.py  a8238945ed07_initial_schema.py
event-ticketing-system/src/application/command_handlers/: approve_refund_handler.py  cancel_event_handler.py  check_in_handler.py  create_booking_handler.py  create_event_handler.py  disable_ticket_category_handler.py  expire_booking_handler.py  pay_booking_handler.py  publish_event_handler.py  refund_handlers.py
event-ticketing-system/src/application/commands/: approve_refund_command.py  cancel_event_command.py  check_in_command.py  create_booking_command.py  create_event_command.py  disable_ticket_category_command.py  expire_booking_command.py  pay_booking_command.py  publish_event_command.py  refund_commands.py
event-ticketing-system/src/application/dtos/: event_dto.py  participant_dto.py  sales_report_dto.py
event-ticketing-system/src/application/interfaces/: event_query_service.py  notification_service.py  payment_gateway.py  sales_query_service.py
event-ticketing-system/src/domain/: test_event.py
event-ticketing-system/src/presentation/: depedencies.py  dependencies.py  main.py
event-ticketing-system/tests/domain/: test_booking.py  test_refund.py  test_ticket.py
(+49 files in other folders)
