[project]
name = "kpl-ticketing-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
